# SimpleAV

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  SAMutex.c  SAMutex.h  SAQueue.c  SAQueue.h  SA_api.c  SA_api.h  SimpleAV.c  SimpleAV.h  SimpleAV.pc  player2.c  saplayer-old.c  saplayer.c  test.c  todo.org
cmake/Modules/: FindLibAV.cmake
cmake/modules/: FindLibAvDevice.cmake  FindLibAvUtil.cmake  FindLibSwscale.cmake
include/: SAQueue.h
include/SimpleAV/SDL/: api.h
include/SimpleAV/core/: core.h
include/SimpleAV/core/util/: SAMutex.h  SAQueue.h
src/SimpleAV/SDL/: api.c
src/SimpleAV/core/: core.c
src/SimpleAV/core/util/: SAMutex.c  SAQueue.c
